build-sys: exclude id128-constants.h after all
This file should be rebuild from latest systemd headers, and
not distributed here.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
-include systemd/id128-constants.h
 include systemd/*.h
+exclude systemd/id128-constants.h
 include README.md
 include LICENSE.txt
 graft docs
