--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-addopts = --doctest-modules --doctest-glob=*.rst
+addopts = --doctest-modules --doctest-glob=*.rst --ignore=setup.py
+norecursedirs = .git build
