--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include systemd/*.h
 exclude systemd/id128-constants.h
 include README.md
+include NEWS
 include LICENSE.txt
 include Makefile
 graft docs
