ci: run CIs on push events as well
Let's cover merges into main with CIs too.

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -3,7 +3,11 @@
 # SPDX-License-Identifier: LGPL-2.1-or-later
 #
 name: Install test
-on: [pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
