--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ matrix.python }}-${{ github.ref }}
       cancel-in-progress: true
@@ -22,19 +22,20 @@ jobs:
       fail-fast: false
       matrix:
         python: [
-          "3.7",
           "3.8",
           "3.9",
           "3.10",
-          "3.11.0-rc.1",
+          "3.11",
+          "3.12",
+          "3.13"
         ]
     name: Python ${{ matrix.python }}
     steps:
       - name: Repository checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Configure Python ${{ matrix.python }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
           architecture: x64
@@ -43,6 +44,9 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt -y install gcc libsystemd-dev
+          if dpkg --compare-versions "${{ matrix.python }}" ge 3.12; then
+            python -m pip install setuptools || echo "can't install setuptools"
+          fi
           python -m pip install pytest sphinx
 
       - name: Build (Python ${{ matrix.python }})
