--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.egg
 *.egg-info
 dist
+_build
 build
 eggs
 parts
@@ -30,3 +31,6 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+# Zed
+.zed
