--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,7 +45,10 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt -y update
-          sudo apt -y install gcc libsystemd-dev
+          sudo apt -y install gcc libsystemd-dev universal-ctags
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v3
