--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -33,8 +33,6 @@ jobs:
       image: ${{ matrix.container }}
     name: ${{ matrix.container }}
     steps:
-      - name: Repository checkout
-        uses: actions/checkout@v4
 
       - name: Install dependencies
         shell: bash
@@ -48,31 +46,48 @@ jobs:
               pkg-config
               python3
               systemd
+              rsync
+              wget
           )
 
           case "$DIST_ID" in
           arch)
-              pacman --noconfirm -Sy "${DEPS_COMMON[@]}" systemd-libs python-pip
+              pacman --noconfirm -Sy -u "${DEPS_COMMON[@]}" systemd-libs python-pip ctags gnupg
               ;;
-          centos|fedora)
-              dnf -y install "${DEPS_COMMON[@]}" systemd-devel python3-devel python3-pip
+          centos)
+              dnf config-manager --set-enabled crb
+              dnf install -y epel-release
+              dnf -y install "${DEPS_COMMON[@]}" systemd-devel python3-devel python3-pip ctags gnupg2
+              ;;
+          fedora)
+              dnf -y install "${DEPS_COMMON[@]}" systemd-devel python3-devel python3-pip ctags gnupg2
               ;;
           ubuntu|debian)
               apt -y update
-              DEBIAN_FRONTEND=noninteractive apt -y install "${DEPS_COMMON[@]}" libsystemd-dev python3-dev python3-pip
+              DEBIAN_FRONTEND=noninteractive apt -y install "${DEPS_COMMON[@]}" libsystemd-dev python3-dev python3-pip universal-ctags gpg
               ;;
           *)
               echo >&2 "Invalid distribution ID: $DISTRO_ID"
               exit 1
           esac
 
-          python3 -m pip install --break-system-packages pytest sphinx
+          python3 -m pip install --break-system-packages build pytest
+          wget -qO- https://astral.sh/uv/install.sh | sh
+
+      - name: Fix Git config to satisfy Meson
+        run: git config --global safe.directory "*"
+
+      # Checkout repo after installing Git, or the GH Action delete our .git folder.
+      - name: Repository checkout
+        uses: actions/checkout@v4
 
       - name: Install & test
         shell: bash
         run: |
           set -x
-          python3 -m pip install -I -v --break-system-packages .
+          git --version
+          python3 -m build
+          python3 -m pip install --break-system-packages .
           # Avoid importing the systemd module from the git repository
           cd /
           python3 -c 'from systemd import journal; print(journal.__version__)'
