--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ sdist
 develop-eggs
 .installed.cfg
 MANIFEST
+.venv
 
 # Installer logs
 pip-log.txt
@@ -30,3 +31,6 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+# Zed
+.zed
