--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -66,7 +66,7 @@ jobs:
               exit 1
           esac
 
-          python3 -m pip install pytest sphinx
+          python3 -m pip install --break-system-packages pytest sphinx
 
       - name: Build & install
         shell: bash
