--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     concurrency:
       group: ${{ github.workflow }}-${{ matrix.python }}-${{ github.ref }}
       cancel-in-progress: true
@@ -22,19 +22,19 @@ jobs:
       fail-fast: false
       matrix:
         python: [
-          "3.7",
-          "3.8",
           "3.9",
           "3.10",
-          "3.11.0-rc.1",
+          "3.11",
+          "3.12",
+          "3.13"
         ]
     name: Python ${{ matrix.python }}
     steps:
       - name: Repository checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Configure Python ${{ matrix.python }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
           architecture: x64
@@ -42,15 +42,22 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt -y update
-          sudo apt -y install gcc libsystemd-dev
-          python -m pip install pytest sphinx
-
+          sudo apt -y install gcc libsystemd-dev python3-setuptools
+      - name: Create virtualenv
+        run: |
+          python3 -m venv ~/${{ matrix.python }}
+      - name: Install python dependencies
+        run: |
+          source ~/${{ matrix.python }}/bin/activate
+          python3 -m pip install pytest sphinx setuptools
       - name: Build (Python ${{ matrix.python }})
         run: |
           set -x
+          source ~/${{ matrix.python }}/bin/activate
           make -j
           make doc SPHINXOPTS="-W -v"
 
       - name: Test (Python ${{ matrix.python }})
         run: |
+          source ~/${{ matrix.python }}/bin/activate
           make check
