--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     concurrency:
       group: ${{ github.workflow }}-${{ matrix.container }}-${{ github.ref }}
       cancel-in-progress: true
@@ -24,16 +24,16 @@ jobs:
         container: [
             "archlinux:latest",
             "debian:testing",
-            "quay.io/centos/centos:stream8",
+            "quay.io/centos/centos:stream9",
             "quay.io/fedora/fedora:rawhide",
-            "ubuntu:focal",
+            "ubuntu:noble",
         ]
     container:
       image: ${{ matrix.container }}
     name: ${{ matrix.container }}
     steps:
       - name: Repository checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         shell: bash
@@ -52,14 +52,20 @@ jobs:
           case "$DIST_ID" in
           arch)
               pacman --noconfirm -Sy "${DEPS_COMMON[@]}" systemd-libs
+              python3 -m venv ~/venv
+              source ~/venv/bin/activate
               python3 -m ensurepip
               ;;
           centos|fedora)
-              dnf -y install "${DEPS_COMMON[@]}" systemd-devel python3-devel python3-pip
+              dnf -y install "${DEPS_COMMON[@]}" systemd-devel python3-devel python3-pip python3-setuptools
+              python3 -m venv ~/venv
+              source ~/venv/bin/activate
               ;;
           ubuntu|debian)
               apt -y update
-              DEBIAN_FRONTEND=noninteractive apt -y install "${DEPS_COMMON[@]}" libsystemd-dev python3-dev python3-pip
+              DEBIAN_FRONTEND=noninteractive apt -y install "${DEPS_COMMON[@]}" libsystemd-dev python3-dev python3-pip python3-setuptools python3-venv
+              python3 -m venv ~/venv
+              source ~/venv/bin/activate
               ;;
           *)
               echo >&2 "Invalid distribution ID: $DISTRO_ID"
@@ -71,6 +77,7 @@ jobs:
       - name: Build & install
         shell: bash
         run: |
+          source ~/venv/bin/activate
           set -x
           python3 -m pip install -I -v .
           # Avoid importing the systemd module from the git repository
