dir-locals.el: update emacs config to match meson style
The config is copied from systemd. The existing config specified 4-space
indent for C, but individual files override this and the files in fact use
8 spaces.

The config for Python doesn't seem necessary anymore either. I think utf-8
is used everywhere by default.

--- a/src/systemd/meson.build
+++ b/src/systemd/meson.build
@@ -49,7 +49,12 @@ python.extension_module(
 )
 
 # Install Python modules
-python.install_sources('__init__.py', 'journal.py', 'daemon.py', subdir: 'systemd')
+python.install_sources(
+        '__init__.py',
+        'journal.py',
+        'daemon.py',
+        subdir: 'systemd',
+)
 
 # Install test modules
 python.install_sources(
