meson: hook up update-constants helper
$ ninja -C build update-constants -v
ninja: Entering directory `build'
[1/1] /home/zbyszek/src/python-systemd/update-constants.py /home/zbyszek/src/python-systemd/src/systemd/id128-constants.h /home/zbyszek/src/python-systemd/docs/id128.rst /home/zbyszek/src/python-systemd/src/systemd/id128-defines.h /usr/include/systemd/sd-messages.h
Writing /home/zbyszek/src/python-systemd/src/systemd/id128-constants.h…
Writing /home/zbyszek/src/python-systemd/src/systemd/id128-defines.h…
Writing /home/zbyszek/src/python-systemd/docs/id128.rst…

The helper is updated to do the everything in the python script. The wrapper in
Makefile is dropped. It wasn't working properly anyway, and I think the version
in meson is enough.

--- a/meson.build
+++ b/meson.build
@@ -20,4 +20,8 @@ common_c_args = [
         '-DLIBSYSTEMD_VERSION=@0@'.format(libsystemd_dep.version()),
 ]
 
+update_constants_py = files('update-constants.py')
+
 subdir('src/systemd')
+
+alias_target('update-constants', update_constants)
