meson: add global defines using add_project_arguments()
We're not going to be compiling any other C code, so let's simplify
this.

--- a/meson.build
+++ b/meson.build
@@ -15,9 +15,10 @@ python_dep = python.dependency()
 
 libsystemd_dep = dependency('libsystemd')
 
-common_c_args = [
+add_project_arguments(
         '-DPACKAGE_VERSION="@0@"'.format(meson.project_version()),
         '-DLIBSYSTEMD_VERSION=@0@'.format(libsystemd_dep.version()),
-]
+        language : 'c',
+)
 
 subdir('src/systemd')
