--- a/meson.build
+++ b/meson.build
@@ -16,6 +16,7 @@ python_dep = python.dependency()
 libsystemd_dep = dependency('libsystemd')
 
 add_project_arguments(
+        '-D_GNU_SOURCE=1',
         '-DPACKAGE_VERSION="@0@"'.format(meson.project_version()),
         '-DLIBSYSTEMD_VERSION=@0@'.format(libsystemd_dep.version()),
         language : 'c',
