meson: copy .py files to build directory
This seems to do the trick:
$ ninja -C build
$ PYTHONPATH=build/src/ python -c 'from systemd import id128; print(id128)'
<module 'systemd.id128' from '/home/zbyszek/src/python-systemd/build/src/systemd/id128.cpython-313-x86_64-linux-gnu.so'>
$ PYTHONPATH=build/src/ pytest src/systemd/test
...
============================ test session starts =============================
platform linux -- Python 3.13.4, pytest-8.3.4, pluggy-1.5.0
rootdir: /home/zbyszek/src/python-systemd
configfile: pyproject.toml
plugins: ...
collected 61 items

build/src/systemd/test/test_daemon.py ........................         [ 39%]
build/src/systemd/test/test_id128.py ....                              [ 45%]
build/src/systemd/test/test_journal.py ............................    [ 91%]
build/src/systemd/test/test_login.py .....                             [100%]

============================= 61 passed in 0.21s =============================

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,8 @@ project(
 python = import('python').find_installation('python3', pure: false)
 python_dep = python.dependency()
 
+fs = import('fs')
+
 libsystemd_dep = dependency('libsystemd')
 
 add_project_arguments(
