meson: drop '-impl' from phony target output
I think this was needed as some point in meson, but it isn't anymore and
we dropped those in systemd a while ago.

--- a/src/systemd/meson.build
+++ b/src/systemd/meson.build
@@ -65,7 +65,7 @@ python.install_sources(
 include_dir = libsystemd_dep.get_variable(pkgconfig: 'includedir')
 
 update_constants = custom_target(
-        output: 'update-constants-impl',
+        output: 'update-constants',
         command: [
                 update_constants_py,
                 meson.current_source_dir() / 'id128-constants.h',
